沃尔玛初始化接口

--- a/pre-system/src/main/resources/application-dev.yml
+++ b/pre-system/src/main/resources/application-dev.yml
@@ -64,6 +64,7 @@ pre:
       - wph_account
       - douyin_device_iid
       - douyin_sign_data
+      - douyin_woerma
     tenantIdColumn: tenant_id
   url:
     address: http://localhost:9528
