--- a/pre-system/src/main/resources/application-devlocal.yml
+++ b/pre-system/src/main/resources/application-devlocal.yml
@@ -63,6 +63,7 @@ pre:
       - jd_ck_copy2
       - jd_ck_copy3
       - douyin_sign_data
+      - douyin_woerma
     tenantIdColumn: tenant_id
   url:
     address: http://localhost:9528
